[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Path.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Building.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Pedestrians.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Spawner2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Pedestrians2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Deleter2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Deleter.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=12]

[node name="Game" type="Node2D"]
script = ExtResource( 11 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background" groups=["Lighting"]]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.870588, 0.721569, 0.529412, 1 )

[node name="Path" parent="." instance=ExtResource( 1 )]

[node name="Building" parent="." instance=ExtResource( 2 )]

[node name="Ui" parent="." instance=ExtResource( 4 )]

[node name="Settings" parent="Ui/MenuButtons/Start/StartMenu" index="1"]
toggle_mode = true

[node name="Label" parent="Ui" index="1"]
margin_top = 44.0
margin_bottom = 194.0

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 282, 234 )

[node name="Bullet" parent="Player" instance=ExtResource( 12 )]
position = Vector2( -282, -234 )

[node name="Pedestrians" parent="." instance=ExtResource( 5 )]
position = Vector2( 23, 958 )

[node name="Spawner" parent="." instance=ExtResource( 6 )]
position = Vector2( 25, 958 )

[node name="Deleter" parent="." instance=ExtResource( 10 )]
position = Vector2( -100, 958 )
collision_layer = 7
collision_mask = 7

[node name="Pedestrians2" parent="." instance=ExtResource( 8 )]
position = Vector2( 550, 958 )

[node name="Spawner2" parent="." instance=ExtResource( 7 )]
position = Vector2( 550, 958 )

[node name="Deleter2" parent="." instance=ExtResource( 9 )]
position = Vector2( 650, 958 )

[connection signal="toggled" from="Ui/MenuButtons/Start/StartMenu/Settings" to="Ui/MenuButtons" method="_on_Settings_toggled"]
[connection signal="pressed" from="Ui/MenuButtons/Difficulty/DifficultyMenu/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Ui/MenuButtons/Difficulty/DifficultyMenu/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Ui/MenuButtons/Difficulty/DifficultyMenu/Hard" to="." method="_on_Hard_pressed"]
[connection signal="body_entered" from="Deleter" to="." method="_on_Deleter_body_entered"]
[connection signal="body_entered" from="Deleter2" to="." method="_on_Deleter2_body_entered"]

[editable path="Ui"]
